--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Welcome - DreamBioPharm</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -50,7 +50,9 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
                     <div class="center col-lg-8 offset-lg-2 bottommargin">
-                        <h6 class="text-rotater font-secondary" data-separator="," data-rotate="fadeInRight" data-speed="3500">상표등록(등록번호: 제 1230364호)된 전산시스템으로</span><br> 1금융 은행권과 연결되어 편리성과 강력한 안정선을 추구합니다</span><br> </h6>
+                        <h6 class="text-rotater font-secondary" data-separator="," data-rotate="fadeInRight" data-speed="3500">
+                            <mark><b>상표등록(등록번호: 제 1230364호)</b></mark>된 전산시스템으로</span><br> 1금융 은행권과 연결되어 편리성과 강력한 안정성을 추구</span><br>
+                        </h6>
                     </div>
                     <br><br>
                 </div>
@@ -199,9 +201,10 @@
                                 <h4>1975-2013</h4>
                                 <h4 class="subheading">설립초기</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">(주) 영진식품과 (주) 영진 네추럴을 거치면서 </p>
-                                <p class="text-muted">30년간 건강기능 식품 제조, 판매, 수출을 하며</p>
-                                <p class="text-muted">2013년 삼성 바이오 팜 설립</p>
+                            <div class="timeline-body">
+                                <p class="text-muted">(주) 영진식품과 (주) 영진 네추럴을 거쳐, 30년간 건강기능식품 제조, 판매, 수출함.<br>
+                                     <mark><b>2013년 삼성 바이오 팜 설립</b></mark>
+                                </p>
                             </div>
                         </div>
                     </li>
@@ -212,9 +215,11 @@
                                 <h4>2014-2015</h4>
                                 <h4 class="subheading">도약기</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">누적된 건강식품 노하우로 탄생된 최고의 건강식품과</p>
-                                <p class="text-muted">차별화된 마케팅으로시장을 선도하며</p>
-                                <p class="text-muted">다시 한번 앞선 마케팅 시스템으로 제2의 도약을 준비함</p>                                                                                   
+                            <div class="timeline-body">
+                                <p class="text-muted">누적된 건강식품 노하우로 탄생된<br>
+                                                      최고의 건강식품과 차별화된 마케팅으로<br>
+                                                      건강식품 시장을 선도
+                                </p>                                                                                   
                             </div>
                         </div>
                     </li>
@@ -225,9 +230,13 @@
                                 <h4>2015-2017</h4>
                                 <h4 class="subheading">성장기</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">삼성바이오팜 New Sun Sm 적립카드 출시(2015.07.20)</p>
-                            <p class="text-muted">삼성바이오팜 통합카드 출시(2015.08.11)</p>
-                            <p class="text-muted">삼성바이오팜 BC(JB 무기명 선불식)카드 세계최초출시(2017.07.11)</p>
+                            <div class="timeline-body">
+                                <p class="text-muted">New Sun Sm 적립카드 출시(2015.07.20)<br>
+                                                      삼성바이오팜 통합카드 출시(2015.08.11)<br>
+                                                      <mark><b>SM POINT 상표권출원(2016.04.27)</b></mark><br>
+                                                      삼성바이오팜 BC(JB 무기명 선불식)카드<br>
+                                                      <mark><b>세계최초출시(2017.07.11)</b></mark>
+                                </p>
                             </div>
                         </div>
                     </li>
@@ -239,10 +248,10 @@
                                 <h4 class="subheading">재도약</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">(주) 드림바이오팜</p>
-                                <p class="text-muted">"신뢰적 가치와 가치의 공유"라는 슬로건으로</p>
-                                <p class="text-muted">선진화된 1금융권과의 협업으로</p>
-                                <p class="text-muted">안전하고 신속한 시스템을 갖춤</p>
+                                <p class="text-muted">(주) 드림바이오팜의 슬로건<br>
+                                                      <mark><b>"신뢰적 가치와 가치의 공유"</b></mark><br>
+                                                      선진화된 1금융권과의 협업으로<br>
+                                                      안전하고 신속한 시스템을 갖춤</p>
                             </div>
                         </div>
                     </li>
@@ -401,13 +410,13 @@
                                     
                                     <ul class="list-inline">
                                         <li>
-                                            <br><br>
-                                            <strong>소비자가:</strong>
-                                             120,000원
+                                            <br><br>                                          
+                                                <strong>소비자가:</strong>
+                                                120,000원                                       
                                         </li>
-                                        <li>
-                                            <strong>회원가:</strong>
-                                             70,000원
+                                        <li>                                            
+                                                <strong>회원가:</strong>
+                                                70,000원                                         
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
